update the profile

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Email: mathan.it.official@gmail.com </p><p>Phone: 9043343357</p> 
+            <p>Email: learnmathan@gmail.com </p><p>Phone: 9043343357</p> 
             <div class="logo">
                 <a href="mailto:mathan.it.official@gmail.com"><img src="icon/gmail.png" alt="Your Photo" ></a>
                 <a href="tel:+919043343357"><img src="icon/phone-call.png" alt="Your Photo" ></a>
