update to profile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>I am a web developer with a passion for creating interactive and user-friendly websites. Skilled in HTML, CSS, JavaScript, Reactjs, UI/UX Design, Java and Python</p>
                 <h2>Contact</h2>
                <div class="logo">
-                <a href="mailto:mathan.it.official@gmail.com"><img src="icon/gmail.png" alt="Your Photo" ></a>
+                <a href="mailto:learnmathan@gmail.com"><img src="icon/gmail.png" alt="Your Photo" ></a>
                 <a href="tel:+919043343357"><img src="icon/phone-call.png" alt="Your Photo" ></a>
                 <a href="https://www.linkedin.com/in/mathan-a-030804347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="icon/linkedin.png" alt="Your Photo" ></a>
                 <a href="https://www.instagram.com/mathan_it_a"><img src="icon/instagram.png" alt="Your Photo" ></a>
@@ -251,7 +251,7 @@
             <h2>Contact</h2>
             <p>Email: learnmathan@gmail.com </p><p>Phone: 9043343357</p> 
             <div class="logo">
-                <a href="mailto:mathan.it.official@gmail.com"><img src="icon/gmail.png" alt="Your Photo" ></a>
+                <a href="mailto:learnmathan@gmail.com"><img src="icon/gmail.png" alt="Your Photo" ></a>
                 <a href="tel:+919043343357"><img src="icon/phone-call.png" alt="Your Photo" ></a>
                 <a href="https://www.linkedin.com/in/mathan-a-030804347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="icon/linkedin.png" alt="Your Photo"></a>
                 <a href="https://www.instagram.com/mathan_it_a"><img src="icon/instagram.png" alt="Your Photo"></a>
