--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://www.instagram.com/mathan_it_a"><img src="icon/instagram.png" alt="Your Photo" ></a>
                </div>
                 <div class="btncontainer">
-                    <a href="img/Mathan A make.pdf" class="btn">Download Resume</a>
+                    <a href="img/Mathan_A_JavaDeveloper.pdf" class="btn">Download Resume</a>
                 </div>
             </div>
         </div>
