Update name in bio section of index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             
             <div class="bio">
-                <h2 class="name">Mathan A</h2>
+                <h2 class="name">Mathan</h2>
                 <p>I am a web developer with a passion for creating interactive and user-friendly websites. Skilled in HTML, CSS, JavaScript, Reactjs, UI/UX Design, Java and Python</p>
                 <h2>Contact</h2>
                <div class="logo">
