--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         
         <div class="containerz">
-            <h1 class="logo">Mathan A</h1>
+            <h1 class="logo">Mathan</h1>
             <p class="tagline">Welcome to my Portfolio</p>
         </div>
         <div class="navebar">
