Updated portfolio and resolved conflicts

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="navebar">
 
             <ul id="menulist">
-               <a href="#home" onclick="toggleMenu()"> <li> Home </li></a>
-               <a href="#about" onclick="toggleMenu()"> <li>About</li></a>
-                <a href="#skills" onclick="toggleMenu()"><li>Skill</li></a>
-                <a href="#projects" onclick="toggleMenu()"><li>Project</li></a>
-               <a href="#award" onclick="toggleMenu()"> <li>Awards</li></a>
-               <a href="#contact" onclick="toggleMenu()"> <li>Contact</li></a>
+                <li><a href href="#home" onclick="toggleMenu()"> Home </a></li>
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#skills" onclick="toggleMenu()">Skill</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">Project</a></li>
+                <li><a href="#award" onclick="toggleMenu()">Awards</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </ul>
         </div>
 
